use jdk-8 compatible lib methods